[gd_scene load_steps=10 format=3 uid="uid://b1tqykbt4me1n"]

[ext_resource type="Script" uid="uid://cxh0wqr722wul" path="res://scripts/pasto.gd" id="1_mwkgt"]
[ext_resource type="Texture2D" uid="uid://bvu7unpj5xrs6" path="res://assets/sprites/pasto prueba sheet.png" id="2_3cs0m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_frr3q"]
radius = 13.3417

[sub_resource type="CircleShape2D" id="CircleShape2D_2kn2e"]
radius = 28.6356

[sub_resource type="AtlasTexture" id="AtlasTexture_inox0"]
atlas = ExtResource("2_3cs0m")
region = Rect2(0, 0, 82, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuh15"]
atlas = ExtResource("2_3cs0m")
region = Rect2(82, 0, 82, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_73i72"]
atlas = ExtResource("2_3cs0m")
region = Rect2(164, 0, 82, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_b32us"]
atlas = ExtResource("2_3cs0m")
region = Rect2(246, 0, 82, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_i807n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_inox0")
}],
"loop": true,
"name": &"p_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuh15")
}],
"loop": true,
"name": &"p_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_73i72")
}],
"loop": true,
"name": &"p_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b32us")
}],
"loop": true,
"name": &"p_3",
"speed": 5.0
}]

[node name="pasto" type="StaticBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_mwkgt")

[node name="collsh" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_frr3q")

[node name="area_a_limpiar" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="ovalo_area_a_limpiar" type="CollisionShape2D" parent="area_a_limpiar"]
scale = Vector2(1, 0.5)
shape = SubResource("CircleShape2D_2kn2e")

[node name="sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1, 0.585)
sprite_frames = SubResource("SpriteFrames_i807n")
animation = &"p_3"
frame_progress = 0.188747

[node name="timer_curacion" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="timer_intoxicacion" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="area_a_limpiar" to="." method="_on_area_a_limpiar_body_entered"]
[connection signal="body_exited" from="area_a_limpiar" to="." method="_on_area_a_limpiar_body_exited"]
